# chip8

./: README.md  meson-vcpkg.txt  meson.build  meson_options.txt
include/: emulator.h  log.h  sdl.h
src/: emulator.c  main.c  meson.build  sdl.c
